--- a/Nauktion/Views/Auktion/Index.cshtml
+++ b/Nauktion/Views/Auktion/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model List<AuktionBudViewModel>
+﻿@using Microsoft.AspNetCore.Identity
+@inject UserManager<NauktionUser> UserManager
+@model List<AuktionBudViewModel>
 
 @{
     ViewData["Title"] = "Auktioner";
@@ -8,32 +10,40 @@
     var list2 = Model.Skip(1).EveryOther();
 }
 
-<div class="row">
+
+@if (await UserManager.IsInRoleAsync(User, NauktionRoles.Admin))
+{
+    <p>
+        <a class="btn btn-primary center-block" asp-controller="Auktion" asp-action="Create">Skapa ny auktion <span class="label label-danger">@NauktionRoles.Admin.ToString()</span></a>
+    </p>
+}
+
+<article class="row">
     <div class="col-sm-6">
         @foreach (AuktionBudViewModel m in list1)
         {
-            <partial name="_AuktionPreviewPartialView" model="@m"/>
+            <partial name="_AuktionPreviewPartialView" model="@m" />
         }
     </div>
 
     <div class="col-sm-6">
         @foreach (AuktionBudViewModel m in list2)
         {
-            <partial name="_AuktionPreviewPartialView" model="@m"/>
+            <partial name="_AuktionPreviewPartialView" model="@m" />
         }
     </div>
-    @if (Model.Count == 0)
-    {
-        <div class="col-xs-12">
-            <i class="text-muted">(Det finns inga öppna auktioner just nu. Titta förbi senare!)</i>
-        </div>
-    }
-</div>
+</article>
+@if (Model.Count == 0)
+{
+    <article>
+        <i class="text-muted">(Det finns inga öppna auktioner just nu. Titta förbi senare!)</i>
+    </article>
+}
 
 @section Scripts
-{
+    {
     <script type="text/javascript">
-        $(function() {
+        $(function () {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
