--- a/Nauktion/Views/Shared/_LayoutWithoutHeader.cshtml
+++ b/Nauktion/Views/Shared/_LayoutWithoutHeader.cshtml
@@ -42,6 +42,14 @@
         </div>
 
         <div class="marketing">
+            @if (!string.IsNullOrWhiteSpace(TempData["Message"] as string))
+            {
+                <div class="alert alert-info alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Info!</strong> @TempData["Message"]
+                </div>
+            }
+
             @RenderBody()
         </div>
 
