--- a/Nauktion/Views/Shared/_LayoutWithoutHeader.cshtml
+++ b/Nauktion/Views/Shared/_LayoutWithoutHeader.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<NauktionUser> SignInManager
 @inject UserManager<NauktionUser> UserManager
 <!DOCTYPE html>
