--- a/Nauktion/Views/Admin/Create.cshtml
+++ b/Nauktion/Views/Admin/Create.cshtml
@@ -6,7 +6,7 @@
     ViewData["Message"] = "Skapa ny auktion.";
 }
 
-<form asp-controller="Auktion" asp-action="Create" method="post">
+<form asp-controller="Admin" asp-action="Create" method="post">
     <div class="row">
         <div class="form-group col-sm-6">
             <label asp-for="Titel"></label>
