--- a/Nauktion/Views/Admin/_Layout.cshtml
+++ b/Nauktion/Views/Admin/_Layout.cshtml
@@ -20,6 +20,7 @@
         <ul class="nav nav-pills nav-stacked">
             <li><a asp-controller="Admin" asp-action="Index">Start</a></li>
             <li><a asp-controller="Admin" asp-action="Users">Användare</a></li>
+            <li><a asp-controller="Admin" asp-action="Create">Skapa ny auktion</a></li>
         </ul>
     </div>
     <div class="col-md-9">
