--- a/Nauktion/Views/Auktion/View.cshtml
+++ b/Nauktion/Views/Auktion/View.cshtml
@@ -88,7 +88,7 @@
         @if (itsmine)
         {
             <p>
-                <a class="" asp-controller="Auktion" asp-action="Alter" asp-route-id="@Model.AuktionID">
+                <a class="" asp-controller="Admin" asp-action="Alter" asp-route-id="@Model.AuktionID">
                     Redigera auktion...
                 </a>
             </p>
