--- a/Nauktion/Views/Shared/_AuktionDeletePartialView.cshtml
+++ b/Nauktion/Views/Shared/_AuktionDeletePartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AuktionDeleteViewModel
 
-<form method="post" asp-controller="Auktion" asp-action="Delete">
+<form method="post" asp-controller="Admin" asp-action="Delete">
     <input asp-for="AuktionID" type="hidden" />
     <div class="panel panel-danger">
         <div class="panel-heading has-error">
