Added Chart.js via LibMan

--- a/Nauktion/Views/Admin/Alter.cshtml
+++ b/Nauktion/Views/Admin/Alter.cshtml
@@ -2,24 +2,22 @@
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<NauktionUser> UserManager
 @model AuktionViewModel
-@{
-    ViewData["Title"] = "Redigera auktion";
-    ViewData["Message"] = "Ändra på din auktion " + Model.Titel;
-}
+
+<h2>Redigera auktion</h2>
 
 <form asp-controller="Admin" asp-action="Alter" method="post">
-    <input asp-for="AuktionID" type="hidden"/>
+    <input asp-for="AuktionID" type="hidden" />
     <div class="row">
         <div class="form-group col-sm-6">
             <label asp-for="Titel"></label>
-            <input class="form-control" asp-for="Titel"/>
+            <input class="form-control" asp-for="Titel" />
             <span class="text-danger" asp-validation-for="Titel"></span>
         </div>
         <div class="form-group col-sm-6">
             <label asp-for="Utropspris"></label>
             <div class="input-group">
                 <span class="input-group-addon">@RegionInfo.CurrentRegion.CurrencySymbol</span>
-                <input class="form-control" asp-for="Utropspris"/>
+                <input class="form-control" asp-for="Utropspris" />
             </div>
             <span class="text-danger" asp-validation-for="Utropspris"></span>
         </div>
@@ -31,7 +29,7 @@
     </div>
     <div class="form-group">
         <label asp-for="SlutDatum"></label>
-        <input class="form-control" asp-for="SlutDatum"/>
+        <input class="form-control" asp-for="SlutDatum" />
         <span class="text-danger" asp-validation-for="SlutDatum"></span>
     </div>
     <div class="form-group">
@@ -43,12 +41,12 @@
         <button type="submit" class="btn btn-primary">Spara auktion</button>
     </div>
 </form>
-<hr/>
+<hr />
 <div>
-    <partial name="_AuktionDeletePartialView" model="@(new AuktionDeleteViewModel{AuktionID = Model.AuktionID})"/>
+    <partial name="_AuktionDeletePartialView" model="@(new AuktionDeleteViewModel{AuktionID = Model.AuktionID})" />
 </div>
 
 @section Scripts
-{
-    <partial name="_ValidationScriptsPartial"/>
+    {
+    <partial name="_ValidationScriptsPartial" />
 }
