--- a/Nauktion/Views/Admin/Create.cshtml
+++ b/Nauktion/Views/Admin/Create.cshtml
@@ -1,21 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject UserManager<NauktionUser> UserManager
 @model AuktionViewModel
-@{
-    ViewData["Title"] = "Ny auktion";
-    ViewData["Message"] = "Skapa ny auktion.";
-}
+
+<h2>Ny auktion</h2>
 
 <form asp-controller="Admin" asp-action="Create" method="post">
     <div class="row">
         <div class="form-group col-sm-6">
             <label asp-for="Titel"></label>
-            <input class="form-control" asp-for="Titel"/>
+            <input class="form-control" asp-for="Titel" />
             <span class="text-danger" asp-validation-for="Titel"></span>
         </div>
         <div class="form-group col-sm-6">
             <label asp-for="Utropspris"></label>
-            <input class="form-control" asp-for="Utropspris"/>
+            <input class="form-control" asp-for="Utropspris" />
             <span class="text-danger" asp-validation-for="Utropspris"></span>
         </div>
     </div>
@@ -26,7 +24,7 @@
     </div>
     <div class="form-group">
         <label asp-for="SlutDatum"></label>
-        <input class="form-control" asp-for="SlutDatum"/>
+        <input class="form-control" asp-for="SlutDatum" />
         <span class="text-danger" asp-validation-for="SlutDatum"></span>
     </div>
     <div class="form-group">
@@ -40,6 +38,6 @@
 </form>
 
 @section Scripts
-{
-    <partial name="_ValidationScriptsPartial"/>
+    {
+    <partial name="_ValidationScriptsPartial" />
 }
