--- a/Nauktion/Views/Admin/_Layout.cshtml
+++ b/Nauktion/Views/Admin/_Layout.cshtml
@@ -21,6 +21,7 @@
             <li><a asp-controller="Admin" asp-action="Index">Start</a></li>
             <li><a asp-controller="Admin" asp-action="Users">Användare</a></li>
             <li><a asp-controller="Admin" asp-action="Create">Skapa ny auktion</a></li>
+            <li><a asp-controller="Admin" asp-action="Statistics">Statestik</a></li>
         </ul>
     </div>
     <div class="col-md-9">
